--- a/index.html
+++ b/index.html
@@ -219,29 +219,29 @@
       enviadas para o email <span id="successEmail"></span> dentro do prazo de sete dias úteis.</div>
   
 
-    <form id="userForm" style="display: flex; flex-wrap: wrap; gap: 20px;">
+    <form id="userForm" style="display: flex; flex-wrap: wrap; gap: 20px;" autocomplete="off">
       
       <div style="flex: 1 1 45%; min-width: 300px;">
         <label for="matricula">Matrícula:</label>
-        <input type="text" id="matricula" name="matricula" autocomplete="off">
+        <input type="text" id="matricula" name="matricula" autocomplete="new-password">
         <span class="warning" id="matriculaWarning">Por favor, preencha este campo com uma matrícula válida.</span>
       </div>
   
       <div style="flex: 1 1 45%; min-width: 300px;">
         <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" autocomplete="off">
+        <input type="text" id="nome" name="nome" autocomplete="new-password">
         <span class="warning" id="nomeWarning">Por favor, preencha este campo.</span>
       </div>
   
       <div style="flex: 1 1 45%; min-width: 300px;">
         <label for="sobrenome">Sobrenome:</label>
-        <input type="text" id="sobrenome" name="sobrenome" autocomplete="off">
+        <input type="text" id="sobrenome" name="sobrenome" autocomplete="new-password">
         <span class="warning" id="sobrenomeWarning">Por favor, preencha este campo.</span>
       </div>
   
       <div style="flex: 1 1 45%; min-width: 300px;">
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" autocomplete="off">
+        <input type="email" id="email" name="email" autocomplete="new-password">
         <span class="warning" id="emailWarning">Por favor, insira um email válido do domínio acad.ufsm.br.</span>
       </div>
   
