--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
   
       <div style="flex: 1 1 45%; min-width: 300px;">
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" autocomplete="new-password">
+        <input type="text" id="email" name="email" autocomplete="new-password">
         <span class="warning" id="emailWarning">Por favor, insira um email válido do domínio acad.ufsm.br.</span>
       </div>
   
