--- a/index.html
+++ b/index.html
@@ -223,25 +223,25 @@
       
       <div style="flex: 1 1 45%; min-width: 300px;">
         <label for="matricula">Matrícula:</label>
-        <input type="text" id="matricula" name="matricula" autocomplete="off">
+        <input type="search" id="matricula" name="matricula" autocomplete="off">
         <span class="warning" id="matriculaWarning">Por favor, preencha este campo com uma matrícula válida.</span>
       </div>
   
       <div style="flex: 1 1 45%; min-width: 300px;">
         <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" autocomplete="off">
+        <input type="search" id="nome" name="nome" autocomplete="off">
         <span class="warning" id="nomeWarning">Por favor, preencha este campo.</span>
       </div>
   
       <div style="flex: 1 1 45%; min-width: 300px;">
         <label for="sobrenome">Sobrenome:</label>
-        <input type="text" id="sobrenome" name="sobrenome" autocomplete="off">
+        <input type="search" id="sobrenome" name="sobrenome" autocomplete="off">
         <span class="warning" id="sobrenomeWarning">Por favor, preencha este campo.</span>
       </div>
   
       <div style="flex: 1 1 45%; min-width: 300px;">
         <label for="email">Email:</label>
-        <input type="text" id="email" name="email" autocomplete="off">
+        <input type="search" id="email" name="email" autocomplete="off">
         <span class="warning" id="emailWarning">Por favor, insira um email válido do domínio acad.ufsm.br.</span>
       </div>
   
