--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     }
 
     input[type="text"],
+    input[type="search"],
     input[type="number"],
     input[type="file"],
     input[type="email"] {
