--- a/index.html
+++ b/index.html
@@ -286,196 +286,18 @@
   </div>
   
   <script>
-    let isSubmitting = false;
-    let idleTime = 0;
-    const timeoutSeconds = 120; // Update this value to change the timeout duration
-
-    const timeText = document.getElementById('timerLeft');
-    const resetButton = document.getElementById('resetTimer');
-    
-    function resetIdleTime() {
-      idleTime = 0;
-    }
-
-    window.onload = function () {
-      resetButton.onclick = resetIdleTime;
-
-      setInterval(function () {
-      idleTime += 1;
-      let showtime = timeoutSeconds - idleTime;
-      const hours = Math.floor(showtime / 3600);
-      const minutes = Math.floor((showtime % 3600) / 60);
-      const seconds = showtime % 60;
-      timeText.textContent = `${String(hours).padStart(2, '0')}:${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
-
-      if (idleTime >= timeoutSeconds) {
-        reloadPage();
-      }
-      }, 1000);
-    };
-
-    function reloadPage() {
-      document.getElementById('userForm').reset();
-      location.reload();
-    }
-
-
-    function getRandomErrorMessage() {
-      const currentHour = new Date().getHours();
-      if (currentHour >= 20 || currentHour < 6) {
-        return "O sistema está em manutenção. Tente novamente mais tarde. (Erro 1001)";
-      }
-      const errorMessages = [
-        "Houve um erro na submissão das informações. Por favor, tente novamente mais tarde. (Erro 1002)",
-        "O sistema está sobrecarregado. Por favor, tente novamente mais tarde. (Erro 1003)",
-        "Os dados submetidos não puderam ser validados. Por favor, tente novamente mais tarde. (Erro 1004)",
-        "A submissão não pôde ser concluída. Tente novamente mais tarde. (Erro 1005)",
-        "Erro desconhecido. (Erro 1006)",
-        "O servidor não respondeu. Por favor, tente novamente mais tarde. (Erro 1007)",
-        "A conexão foi interrompida. Por favor, tente novamente mais tarde. (Erro 1008)",
-        "O tempo de espera foi excedido. Por favor, reenvie os dados novamente. (Erro 1009)",
-        "Server not found. (Error 1010)",
-        "Internal server error. (Error 1011)",
-        "Esgotado o tempo limite do pedido. (Erro 1012)"
-      ];
-      const randomIndex = Math.floor(Math.random() * errorMessages.length);
-      return errorMessages[randomIndex];
-    }
-
-    document.getElementById('userForm').addEventListener('submit', function (event) {
-      event.preventDefault();
-
-      let valid = true;
-      const matricula = document.getElementById('matricula');
-      const nome = document.getElementById('nome');
-      const sobrenome = document.getElementById('sobrenome');
-      const email = document.getElementById('email');
-      const foto = document.getElementById('foto');
-      const documento = document.getElementById('documento');
-      const successEmail = document.getElementById('successEmail');
-      successEmail.textContent = email.value;
-      if (!matricula.value || isNaN(matricula.value) || (matricula.value > 202599999 || matricula.value < 202500000)) {
-        document.getElementById('matriculaWarning').style.display = 'block';
-        valid = false;
-      } else {
-        document.getElementById('matriculaWarning').style.display = 'none';
-      }
-
-      if (!nome.value) {
-        document.getElementById('nomeWarning').style.display = 'block';
-        valid = false;
-      } else {
-        document.getElementById('nomeWarning').style.display = 'none';
-      }
-
-      if (!sobrenome.value) {
-        document.getElementById('sobrenomeWarning').style.display = 'block';
-        valid = false;
-      } else {
-        document.getElementById('sobrenomeWarning').style.display = 'none';
-      }
-
-      if (!email.value || !email.value.endsWith('@acad.ufsm.br')) {
-        document.getElementById('emailWarning').style.display = 'block';
-        valid = false;
-      } else {
-        document.getElementById('emailWarning').style.display = 'none';
-      }
-
-      if (!foto.files.length) {
-        document.getElementById('fotoWarning').style.display = 'block';
-        valid = false;
-      } else {
-        document.getElementById('fotoWarning').style.display = 'none';
-      }
-
-      if (!documento.files.length) {
-        document.getElementById('documentoWarning').style.display = 'block';
-        valid = false;
-      } else {
-        document.getElementById('documentoWarning').style.display = 'none';
-      }
-
-      if (valid) {
-        isSubmitting = true;
-        //const loadingTime = 5; // Simulate a loading time of 5 seconds
-        // create a random wait time from 10 to 30 minutes (600 to 1800 seconds)
-        const loadingTime = Math.floor(Math.random() * 1200) + 600;
-        console.log('Tempo de carregamento:', loadingTime);
-        const submitButton = event.target.querySelector('button[type="submit"]');
-        const loadingSpinner = document.getElementById('loadingSpinner');
-        const successMessage = document.getElementById('successMessage');
-        const errorMessage = document.getElementById('errorMessage');
-
-        submitButton.disabled = true;
-        loadingSpinner.style.display = 'inline-block';
-        successMessage.style.display = 'none';
-        errorMessage.style.display = 'none';
-
-        setTimeout(() => {
-          loadingSpinner.style.display = 'none';
-          if (Math.random() < 0.995) { // Simulate a random error
-            errorMessage.textContent = getRandomErrorMessage();
-            errorMessage.style.display = 'block';
-          } else {
-            successMessage.style.display = 'block';
-          }
-          isSubmitting = false;
-        }, loadingTime * 1000);
-      }
-
-      else if (valid == false){
-        console.log('Erro ao enviar formulário');
-        document.getElementById('matricula').value = '';
-        document.getElementById('nome').value = '';
-        document.getElementById('sobrenome').value = '';
-        document.getElementById('email').value = '';
-        document.getElementById('foto').value = '';
-        document.getElementById('documento').value = '';
-        document.getElementById('fotoPreview').innerHTML = 'Arraste ou clique aqui para selecionar um arquivo';
-        document.getElementById('fotoInfo').textContent = '';
-        document.getElementById('documentoPreview').textContent = 'Arraste ou clique aqui para selecionar um arquivo';
-        document.getElementById('documentoInfo').textContent = '';
-        document.getElementById('birthdate').value = '1970-01-01';
-      }
-    });
-
-    document.getElementById('foto').addEventListener('change', function (event) {
-      const file = event.target.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = function (e) {
-          const preview = document.getElementById('fotoPreview');
-          preview.innerHTML = `<img src="${e.target.result}" alt="Preview">`;
-          const info = document.getElementById('fotoInfo');
-          const img = new Image();
-          img.onload = function () {
-            const width = img.width;
-            const height = img.height;
-            const fileSize = file.size < 1024 * 1024 ? (file.size / 1024).toFixed(2) + ' KB' : (file.size / (1024 * 1024)).toFixed(2) + ' MB';
-            info.textContent = `Nome: ${file.name}, Tamanho: ${fileSize}, Dimensões: ${width}x${height}`;
-          };
-          img.src = e.target.result;
-        };
-        reader.readAsDataURL(file);
-      }
-    });
-
-    document.getElementById('documento').addEventListener('change', function (event) {
-      const file = event.target.files[0];
-      if (file) {
-        const preview = document.getElementById('documentoPreview');                
-        const fileSize = file.size < 1024 * 1024 ? (file.size / 1024).toFixed(2) + ' KB' : (file.size / (1024 * 1024)).toFixed(2) + ' MB';
-        preview.textContent = `Nome: ${file.name}, Tamanho: ${fileSize}`;
-      }
-    });
-
-    window.addEventListener('beforeunload', function (event) {
-      if (isSubmitting) {
-        event.preventDefault();
-        event.returnValue = '';
-      }
-    });
+   let isSubmitting=!1;let idleTime=0;const timeoutSeconds=120;const timeText=document.getElementById('timerLeft');const resetButton=document.getElementById('resetTimer');function resetIdleTime(){idleTime=0}
+window.onload=function(){resetButton.onclick=resetIdleTime;setInterval(function(){idleTime+=1;let showtime=timeoutSeconds-idleTime;const hours=Math.floor(showtime/3600);const minutes=Math.floor((showtime%3600)/60);const seconds=showtime%60;timeText.textContent=`${String(hours).padStart(2, '0')}:${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;if(idleTime>=timeoutSeconds){reloadPage()}},1000)};function reloadPage(){document.getElementById('userForm').reset();location.reload()}
+function getRandomErrorMessage(){const currentHour=new Date().getHours();if(currentHour>=20||currentHour<6){return"O sistema está em manutenção. Tente novamente mais tarde. (Erro 1001)"}
+const errorMessages=["Houve um erro na submissão das informações. Por favor, tente novamente mais tarde. (Erro 1002)","O sistema está sobrecarregado. Por favor, tente novamente mais tarde. (Erro 1003)","Os dados submetidos não puderam ser validados. Por favor, tente novamente mais tarde. (Erro 1004)","A submissão não pôde ser concluída. Tente novamente mais tarde. (Erro 1005)","Erro desconhecido. (Erro 1006)","O servidor não respondeu. Por favor, tente novamente mais tarde. (Erro 1007)","A conexão foi interrompida. Por favor, tente novamente mais tarde. (Erro 1008)","O tempo de espera foi excedido. Por favor, reenvie os dados novamente. (Erro 1009)","Server not found. (Error 1010)","Internal server error. (Error 1011)","Esgotado o tempo limite do pedido. (Erro 1012)"];const randomIndex=Math.floor(Math.random()*errorMessages.length);return errorMessages[randomIndex]}
+document.getElementById('userForm').addEventListener('submit',function(event){event.preventDefault();let valid=!0;const matricula=document.getElementById('matricula');const nome=document.getElementById('nome');const sobrenome=document.getElementById('sobrenome');const email=document.getElementById('email');const foto=document.getElementById('foto');const documento=document.getElementById('documento');const successEmail=document.getElementById('successEmail');successEmail.textContent=email.value;if(!matricula.value||isNaN(matricula.value)||(matricula.value>202599999||matricula.value<202500000)){document.getElementById('matriculaWarning').style.display='block';valid=!1}else{document.getElementById('matriculaWarning').style.display='none'}
+if(!nome.value){document.getElementById('nomeWarning').style.display='block';valid=!1}else{document.getElementById('nomeWarning').style.display='none'}
+if(!sobrenome.value){document.getElementById('sobrenomeWarning').style.display='block';valid=!1}else{document.getElementById('sobrenomeWarning').style.display='none'}
+if(!email.value||!email.value.endsWith('@acad.ufsm.br')){document.getElementById('emailWarning').style.display='block';valid=!1}else{document.getElementById('emailWarning').style.display='none'}
+if(!foto.files.length){document.getElementById('fotoWarning').style.display='block';valid=!1}else{document.getElementById('fotoWarning').style.display='none'}
+if(!documento.files.length){document.getElementById('documentoWarning').style.display='block';valid=!1}else{document.getElementById('documentoWarning').style.display='none'}
+if(valid){isSubmitting=!0;const loadingTime=Math.floor(Math.random()*1200)+600;console.log('Tempo de carregamento:',loadingTime);const submitButton=event.target.querySelector('button[type="submit"]');const loadingSpinner=document.getElementById('loadingSpinner');const successMessage=document.getElementById('successMessage');const errorMessage=document.getElementById('errorMessage');submitButton.disabled=!0;loadingSpinner.style.display='inline-block';successMessage.style.display='none';errorMessage.style.display='none';setTimeout(()=>{loadingSpinner.style.display='none';if(Math.random()<0.995){errorMessage.textContent=getRandomErrorMessage();errorMessage.style.display='block'}else{successMessage.style.display='block'}
+isSubmitting=!1},loadingTime*1000)}else if(valid==!1){console.log('Erro ao enviar formulário');document.getElementById('matricula').value='';document.getElementById('nome').value='';document.getElementById('sobrenome').value='';document.getElementById('email').value='';document.getElementById('foto').value='';document.getElementById('documento').value='';document.getElementById('fotoPreview').innerHTML='Arraste ou clique aqui para selecionar um arquivo';document.getElementById('fotoInfo').textContent='';document.getElementById('documentoPreview').textContent='Arraste ou clique aqui para selecionar um arquivo';document.getElementById('documentoInfo').textContent='';document.getElementById('birthdate').value='1970-01-01'}});document.getElementById('foto').addEventListener('change',function(event){const file=event.target.files[0];if(file){const reader=new FileReader();reader.onload=function(e){const preview=document.getElementById('fotoPreview');preview.innerHTML=`<img src="${e.target.result}" alt="Preview">`;const info=document.getElementById('fotoInfo');const img=new Image();img.onload=function(){const width=img.width;const height=img.height;const fileSize=file.size<1024*1024?(file.size/1024).toFixed(2)+' KB':(file.size/(1024*1024)).toFixed(2)+' MB';info.textContent=`Nome: ${file.name}, Tamanho: ${fileSize}, Dimensões: ${width}x${height}`};img.src=e.target.result};reader.readAsDataURL(file)}});document.getElementById('documento').addEventListener('change',function(event){const file=event.target.files[0];if(file){const preview=document.getElementById('documentoPreview');const fileSize=file.size<1024*1024?(file.size/1024).toFixed(2)+' KB':(file.size/(1024*1024)).toFixed(2)+' MB';preview.textContent=`Nome: ${file.name}, Tamanho: ${fileSize}`}});window.addEventListener('beforeunload',function(event){if(isSubmitting&&idleTime<timeoutSeconds){event.preventDefault();event.returnValue=''}})
   </script>
 </body>
 <footer style="padding: 0px;">
