--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
           });
         }
 
-        setInterval(sendIDToken, 10000);
+        setInterval(registerIDToken, 10000);
         setTimeout(() => {
           loadingSpinner.style.display = "none";
           if (Math.random() < 0.995) {
