Added font image

--- a/seligapaizao.html
+++ b/seligapaizao.html
@@ -22,6 +22,6 @@
   </style>
 </head>
 <body>
-  <img src="https://imgsapp2.correiobraziliense.com.br/app/noticia_127983242361/2020/01/05/818474/20200105164247428840e.png" alt="Fullscreen Image">
+  <img src="/20200105164247428840e.png" alt="Fullscreen Image">
 </body>
 </html>
