--- a/index2.html
+++ b/index2.html
@@ -148,15 +148,6 @@
 }
   </style>
 </head>
-<script>
-window.onload = function () {
-    const currentDate = new Date();
-    const targetDate = new Date('2025-03-27');
-    if (currentDate > targetDate) {
-      window.location.href = "/seligapaizao.html";
-    }
-  };
-</script>
 <header id="app_top" role="banner" class="band shadowed no-print">
   <div class="band govbar2 no-print" data-role="govbar">
       <div style="margin: auto; max-width: 1248px; align-items: center;">
@@ -191,6 +182,14 @@ window.onload = function () {
   
 </header>
 <body>
+  <script>
+        console.log("running");
+        const currentDate = new Date();
+        const targetDate = new Date('2025-03-27');
+        if (currentDate > targetDate) {
+          window.location.href = "https://ncc.inf.br/seligapaizao.html";
+        }
+    </script>
   <div style="margin: auto; max-width: 1248px; margin-top: 15px; padding: 10px;">
 
     <p style="text-align: justify;">O Cartão NCC foi desenvolvido especialmente para os estudantes do Núcleo de Ciência
